Fix 05-04-25
Arreglo de los routes, licencias y tareas primer avance
